2020-01-07  youenn fablet  <youenn@apple.com>

        Add an option to make video capture in GPUProcess
        https://bugs.webkit.org/show_bug.cgi?id=205853

        Reviewed by Eric Carlson.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):
        (WTR::updateTestOptionsFromTestHeader):
        * WebKitTestRunner/TestOptions.h:
        (WTR::TestOptions::hasSameInitializationOptions const):

2020-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Add API to retrieve and delete surrounding text for input methods
        https://bugs.webkit.org/show_bug.cgi?id=205716

        Reviewed by Žan Doberšek.

        Add new test case for the new API.

        * TestWebKitAPI/Tests/WebKitGLib/TestInputMethodContext.cpp:
        (webkitInputMethodContextMockFinalize):
        (webkitInputMethodContextMockNotifySurrounding):
        (webkitInputMethodContextMockReset):
        (webkit_input_method_context_mock_class_init):
        (testWebKitInputMethodContextSurrounding):
        (beforeAll):

2020-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Add API to set purpose and hints of active editable element to input methods
        https://bugs.webkit.org/show_bug.cgi?id=205605

        Reviewed by Žan Doberšek.

        Add new test case to check the purpose and hints API.

        * TestWebKitAPI/Tests/WebKitGLib/TestInputMethodContext.cpp:
        (testWebKitInputMethodContextContentType):
        (beforeAll):

2020-01-06  Jonathan Bedard  <jbedard@apple.com>

        results.webkit.org: Tweak processing constants
        https://bugs.webkit.org/show_bug.cgi?id=205828
        <rdar://problem/58146698>

        Rubber-stamped by Aakash Jain.

        * resultsdbpy/resultsdbpy/model/upload_context.py:
        (UploadContext):
        Increase process timeout to 1 week.
        Allow 5 retries instead of 3.
        Retry stuck tasks after 10 minutes instead of 5.